# claudino-gpt

./: .gitignore  pyproject.toml
configurations/: model.toml  training.toml
src/claudino_gpt/: main.py  tokenizer.py
src/claudino_gpt/configurations/: model_configuration.py  training_configuration.py
src/claudino_gpt/model/: claudino_gpt.py  feed_forward.py  multi_head_attention.py  transformer_block.py
src/claudino_gpt/persistence/: configuration.py  lazy_parquet_dataset.py  metrics.py  model.py  training.py
src/claudino_gpt/training/: metrics.py  optimization.py  tokenization.py  training_loop.py
